--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -5,6 +5,8 @@ _modify:
     groupName: SPI
   I2S1:
     groupName: I2S
+  MCPWM0:
+    groupName: MCPWM
 
 I2C0:
   _modify:
@@ -14,7 +16,7 @@ I2C0:
 RTC_CNTL:
   _include: ../../../common_patches/rtc_cntl_int_strip.yaml
 
-"EFUSE,I2C0,I2S0,LEDC,UART0,APB_SARADC,UHCI0,RTC_I2C,USB_DEVICE,SPI1,SYSTIMER,I2S1,MCPWM0,PERI_BACKUP,SPI0":
+"EFUSE,I2C0,I2S0,LEDC,UART0,APB_SARADC,UHCI0,RTC_I2C,USB_DEVICE,SPI1,SYSTIMER,I2S1,PERI_BACKUP,SPI0":
   _include: ../../../common_patches/int_strip.yaml
 
 EXTMEM:
@@ -232,3 +234,5 @@ MCPWM0:
     CAP_CH?:
       description: Value of last capture on channel %s
       _strip: CAP?_
+
+  _include: ../../../common_patches/int_strip.yaml
