--- a/esp32p4/svd/patches/esp32p4.yaml
+++ b/esp32p4/svd/patches/esp32p4.yaml
@@ -24,7 +24,7 @@ SPI[01]:
   "*":
     _strip: SPI_MEM_
 
-"ADC,EFUSE,I2C0,I2S0,LEDC,UART0,SPI[01],SYSTIMER,UHCI0,LP_WDT,MCPWM0,PARL_IO,PAU,USB_DEVICE,MIPI_CSI_BRIDGE,MIPI_DSI_BRIDGE,ECDSA,GPIO,H264,PPA,RMT,LP_TOUCH,LP_TSENS":
+"ADC,EFUSE,I2C0,I2S0,LEDC,UART0,SPI[01],SYSTIMER,UHCI0,LP_WDT,PARL_IO,PAU,USB_DEVICE,MIPI_CSI_BRIDGE,MIPI_DSI_BRIDGE,ECDSA,GPIO,H264,PPA,RMT,LP_TOUCH,LP_TSENS":
   _include: ../../../common_patches/int_strip.yaml
 
 ECC:
@@ -121,6 +121,18 @@ MCPWM0:
       FH?_STATUS:
         _strip: TZ_
 
+  CAP_CH%s_CFG:
+    _strip: CAP_
+  CAP_CH%s:
+    _strip: CAP_
+  "EVT_EN,EVT_EN2":
+    _strip: EVT_
+    _strip_end: _EN
+  TASK_EN:
+    _strip: TASK_
+    _strip_end: _EN
+
+  _include: ../../../common_patches/int_strip.yaml
 
 
 DMA:
