--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -9,6 +9,11 @@ I2C0:
     INT_STATUS:
       name: INT_ST
 
+GPIO:
+  _modify:
+    FUNC%s_OUT_SEL_CFG:
+      dim: 31
+
 LP_I2C0:
   _strip: "I2C_"
   "*":
