--- a/common_patches/ledc_collect.yaml
+++ b/common_patches/ledc_collect.yaml
@@ -20,11 +20,15 @@ _cluster:
       name: CONF1
     CH?_DUTY_R:
       name: DUTY_R
+      _modify:
+        "DUTY_R,DUTY_CH_R,DUTY_CH?_R":
+          name: DUTY_R
 
   TIMER%s:
     TIMER?_CONF:
       name: CONF
     TIMER?_VALUE:
       name: VALUE
-
-_include: int_strip.yaml
+      _modify:
+        "CNT,TIMER_CNT":
+          name: CNT
