usb: group DIEPTXF registers into an array

--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -47,3 +47,6 @@ SYSTIMER:
     _modify:
       "*":
         modifiedWriteValues: oneToClear
+
+USB0:
+  _include: ../../../common_patches/usb0.yaml
