usb: specify that the FIFOs allow writing any possible value
This allows users to write any value to the FIFOs without needing to use
the unsafe `bits()` method.

--- a/common_patches/usb0.yaml
+++ b/common_patches/usb0.yaml
@@ -388,6 +388,7 @@ _add:
     dimIndex: 0-15
     size: 32
     description: "Read and write data to the USB FIFOs through this register."
+    writeConstraint: [0, 0xffffffff]
     fields:
       WORD:
         bitOffset: 0
