usb: add write constraints for fields in the dcfg register
This allows svd2rust to make writes to these fields safe.

--- a/common_patches/usb0.yaml
+++ b/common_patches/usb0.yaml
@@ -1,5 +1,14 @@
 _array:
   DIEPTXF*: {}
+
+DCFG:
+  _modify:
+    DEVADDR:
+      writeConstraint: [0, 0x7f]
+    PERFRLINT:
+      writeConstraint: [0, 3]
+
+
 _cluster:
   IN_EP0:
     description: "Device IN endpoint 0"
