--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -17,11 +17,25 @@ RTC_CNTL:
       name: INT_CLR
   _include: ../../../common_patches/int_strip.yaml
 
+RTC_IO:
+  RTC_GPIO_ENABLE_W1TS:
+    _modify:
+      REG_RTCIO_REG_GPIO_ENABLE_W1TS:
+        name: RTC_GPIO_ENABLE_W1TS
+  RTC_GPIO_OUT_W1TC:
+    _modify:
+      GPIO_OUT_DATA_W1TC:
+        name: RTC_GPIO_OUT_DATA_W1TC
+  RTC_GPIO_OUT_W1TS:
+    _modify:
+      GPIO_OUT_DATA_W1TS:
+        name: RTC_GPIO_OUT_DATA_W1TS
+
 "EFUSE,I2C0,I2S0,UART0,APB_SARADC,UHCI0,RTC_I2C":
   _include: ../../../common_patches/int_strip.yaml
 
 LEDC:
-  _include: 
+  _include:
     - ../../../common_patches/ledc_collect.yaml
     - ../../../common_patches/ledc_int.yaml
   INT_RAW:
