--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -14,7 +14,9 @@ APB_SARADC:
       name: CTRL_DATE
   CLKM_CONF:
     _strip: REG_
-  _include: ../../../common_patches/adc.yaml
+  _include:
+    - ../../../common_patches/int_strip.yaml
+    - ../../../common_patches/adc.yaml
 
 I2C0:
   _modify:
@@ -24,7 +26,7 @@ I2C0:
 RTC_CNTL:
   _include: ../../../common_patches/rtc_cntl_int_strip.yaml
 
-"EFUSE,I2C0,UART0,APB_SARADC,SPI1,SYSTIMER":
+"EFUSE,I2C0,UART0,SPI1,SYSTIMER":
   _include: ../../../common_patches/int_strip.yaml
 
 LEDC:
