--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -14,6 +14,7 @@ APB_SARADC:
       - DAC_
   CTRL_DATE:
     _strip: APB_CTRL_
+  _include: ../../../common_patches/int_strip.yaml
 
 I2C0:
   _modify:
@@ -46,7 +47,7 @@ RTC_IO:
       GPIO_OUT_DATA_W1TS:
         name: RTC_GPIO_OUT_DATA_W1TS
 
-"EFUSE,I2C0,I2S0,UART0,APB_SARADC,RTC_I2C":
+"EFUSE,I2C0,I2S0,UART0,RTC_I2C":
   _include: ../../../common_patches/int_strip.yaml
 
 LEDC:
