--- a/esp32s3-ulp/svd/patches/esp32s3-ulp.yaml
+++ b/esp32s3-ulp/svd/patches/esp32s3-ulp.yaml
@@ -17,4 +17,13 @@ RTC_IO:
     _strip: "GPIO_"
 
 RTC_I2C:
+  CMD*:
+    _modify:
+      COMMAND?,COMMAND1?:
+        name: COMMAND
+      COMMAND*_DONE:
+        name: COMMAND_DONE
+  _array:
+    CMD*:
+      description: I2C command%s register
   _include: ../../../common_patches/int_strip.yaml
