GPIO SIGMADELTA name unify & field arrays

--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -50,6 +50,15 @@ LEDC:
 EXTMEM:
   _include: ../../../common_patches/extmem_cache_int_strip.yaml
 
+GPIO_SD:
+  _modify:
+    SIGMADELTA_CG:
+      name: CLOCK_GATE
+    SIGMADELTA_VERSION:
+      name: VERSION
+  SIGMADELTA%s:
+    _strip: SD_
+
 UHCI0:
   _include:
     - ../../../common_patches/uhci_collect.yaml
